==> mambrus/asf/avr32/applications/uc3l-ek-touch-demo/qdebug/qdebug.c <==
#include "qdebug.h"
#include "qdebugtransport.h"
#include "QDebugSettings.h"
#include "compiler.h"
  #include "SPI_Master.h"
  #include "serial.h"

void Set_Global_Config(void)
{
      touch_ret_t touch_ret = TOUCH_SUCCESS;

#if ((DEF_TOUCH_QMATRIX == 1)      ||  \
     (DEF_TOUCH_QTOUCH_GRP_A == 1) ||  \
     (DEF_TOUCH_QTOUCH_GRP_B == 1))

      touch_global_param_t global_params;

      global_params.recal_threshold = (recal_threshold_t)GetChar();
      global_params.di              = GetChar();
      global_params.drift_hold_time = GetChar();
      global_params.max_on_duration = GetChar();
      global_params.neg_drift_rate  = GetChar();
      global_params.pos_drift_rate  = GetChar();
      global_params.pos_recal_delay = GetChar();

      /* update the global parameter value inside the uc3l library */
      touch_ret = QDEBUG_UPDATE_GLOBAL_PARAM_FUNC(&global_params);
      if(touch_ret != TOUCH_SUCCESS)
      {
              while(1);
      }
#endif

#if DEF_TOUCH_AUTONOMOUS_QTOUCH == 1

      touch_at_param_t touch_sensor_param;
      uint8_t dummy_var;

      /* Fill touch_sensor_param structure with default values.
         This is because QTouch Studio does not provide sense and outsense
         values.  So these values should not be overwritten by the update API. */
      touch_ret = QDEBUG_GET_GLOBAL_PARAM_FUNC(&touch_sensor_param);
      if(touch_ret != TOUCH_SUCCESS)
      {
              while(1);
      }

      /* Update data from QTouch Studio. */
      touch_sensor_param.pthr            = (recal_threshold_t)GetChar();
      touch_sensor_param.filter          = GetChar();
      dummy_var                          = GetChar(); /* Skip drift_hold_time. */
      dummy_var                          = GetChar(); /* Skip max_on_duration. */
      touch_sensor_param.ndrift          = GetChar();
      touch_sensor_param.pdrift          = GetChar();

      /* avoid Cppcheck Warning */
      UNUSED(dummy_var);

      /* update the global parameter value inside the uc3l library */
      touch_ret = QDEBUG_UPDATE_GLOBAL_PARAM_FUNC(&touch_sensor_param);
      if(touch_ret != TOUCH_SUCCESS)
      {
              while(1);
      }
#endif

}

void Set_Channel_Config(void)
{
      touch_ret_t touch_ret = TOUCH_SUCCESS;

#if ((DEF_TOUCH_QMATRIX == 1)      || \
     (DEF_TOUCH_QTOUCH_GRP_A == 1) || \
     (DEF_TOUCH_QTOUCH_GRP_B == 1))

      sensor_id_t sensor_id;
      uint8_t type_aks_pos_hyst;

#if (DEF_TOUCH_QMATRIX == 1)
      touch_qm_param_t touch_sensor_param;
#endif

#if ((DEF_TOUCH_QTOUCH_GRP_A == 1) || (DEF_TOUCH_QTOUCH_GRP_B == 1))
      touch_qt_param_t touch_sensor_param;
#endif

      sensor_id = GetChar();

      /* Read back and initialize the touch_sensor_param structure.
         This is because not all the touch_sensor_param members are
         updated by this API. */
      touch_ret = QDEBUG_GET_SENSOR_CONFIG_FUNC( sensor_id, &touch_sensor_param );
      if(touch_ret != TOUCH_SUCCESS)
      {
              while(1);
      }

      /* Update the necessary members of the touch_sensor_param structure
         and write back. */
      touch_sensor_param.detect_threshold  = GetChar();
      type_aks_pos_hyst                    = GetChar();
      touch_sensor_param.aks_group         = (aks_group_t)((uint8_t)((type_aks_pos_hyst & 0x38u) >> 3u ));
      touch_sensor_param.detect_hysteresis = (hysteresis_t)((uint8_t)(type_aks_pos_hyst & 0x03u));

      touch_ret = QDEBUG_UPDATE_SENSOR_CONFIG_FUNC( sensor_id, &touch_sensor_param );
      if(touch_ret != TOUCH_SUCCESS)
      {
              while(1);
      }
#endif

#if DEF_TOUCH_AUTONOMOUS_QTOUCH == 1
      sensor_id_t sensor_id;
      touch_at_param_t touch_sensor_param;

      sensor_id = GetChar(); /* Dummy. To skip sensor_id. */
      /* avoid Cppcheck Warning */
      UNUSED(sensor_id);

      /* Read back and initialize the touch_sensor_param structure.
         This is because not all the touch_sensor_param members are
         updated by this API. */
      touch_ret = QDEBUG_GET_SENSOR_CONFIG_FUNC( &touch_sensor_param );
      if(touch_ret != TOUCH_SUCCESS)
      {
              while(1);
      }

      /* Update the necessary members of the touch_sensor_param structure
         and write back. */
      touch_sensor_param.sense  = GetChar(); /* Sense level (Detect Threshold). */

      touch_ret = QDEBUG_UPDATE_SENSOR_CONFIG_FUNC( &touch_sensor_param );
      if(touch_ret != TOUCH_SUCCESS)
      {
              while(1);
      }
#endif
}

void Transmit_Global_Config(void)
{
      int16_t touch_ret;
      /* avoid Cppcheck Warning */
      UNUSED(touch_ret);

#if ((DEF_TOUCH_QMATRIX == 1)      || \
     (DEF_TOUCH_QTOUCH_GRP_A == 1) || \
     (DEF_TOUCH_QTOUCH_GRP_B == 1))

      touch_global_param_t global_params;

      /* get the global parameters from the library and transmit the global
         parameters to the QTouch Studio */
      touch_ret = QDEBUG_GET_GLOBAL_PARAM_FUNC(&global_params);
      if(touch_ret != TOUCH_SUCCESS)
      {
              while(1);
      }

      PutChar(QT_GLOBAL_CONFIG);

      PutChar(global_params.recal_threshold);
      PutChar(global_params.di);
      PutChar(global_params.drift_hold_time);
      PutChar(global_params.max_on_duration);
      PutChar(global_params.neg_drift_rate);
      PutChar(global_params.pos_drift_rate);
      PutChar(global_params.pos_recal_delay);
      PutInt(measurement_period_ms);
      PutInt(0);//TICKS_PER_MS
      PutChar(0); // Time_Setting
#endif

#if DEF_TOUCH_AUTONOMOUS_QTOUCH == 1
      touch_at_param_t touch_sensor_param;

      /* Fill touch_sensor_param structure with default values.
         This is because QTouch Studio does not provide sense and outsense
         values.  So these values should not be overwritten by the update API. */
      touch_ret = QDEBUG_GET_GLOBAL_PARAM_FUNC(&touch_sensor_param);
      if(touch_ret != TOUCH_SUCCESS)
      {
              while(1);
      }

      PutChar(QT_GLOBAL_CONFIG);

      PutChar(touch_sensor_param.pthr);
      PutChar(touch_sensor_param.filter);
      PutChar(1u); /* Dummy. drift_hold_time. */
      PutChar(0u); /* Dummy. max_on_duration. */
      PutChar(touch_sensor_param.ndrift);
      PutChar(touch_sensor_param.pdrift);
      PutChar(1u); /* Dummy. pos_recal_delay. */
      PutInt(measurement_period_ms);
      PutInt(0);//TICKS_PER_MS
      PutChar(0); // Time_Setting
#endif

  Send_Message();
}

void Transmit_Sensor_Config(void)
{
#if ((DEF_TOUCH_QMATRIX == 1)      || \
     (DEF_TOUCH_QTOUCH_GRP_A == 1) || \
     (DEF_TOUCH_QTOUCH_GRP_B == 1))

      uint8_t c;
      sensor_t *p_sensors = QDEBUG_SENSOR_PTR;

      PutChar(QT_SENSOR_CONFIG);

      PutChar(1);		// 1 = KRS
      for(c=0; c < QDEBUG_NUM_SENSORS; c++)
      {
              PutChar(p_sensors[c].threshold);
              PutChar(p_sensors[c].type_aks_pos_hyst);
              PutChar(p_sensors[c].from_channel);
              PutChar(p_sensors[c].to_channel);
      }
#endif

#if DEF_TOUCH_AUTONOMOUS_QTOUCH == 1
      touch_at_param_t touch_sensor_param;
      int16_t touch_ret;

      touch_ret = QDEBUG_GET_GLOBAL_PARAM_FUNC(&touch_sensor_param);
      if(touch_ret != TOUCH_SUCCESS)
      {
              while(1);
      }

      PutChar(QT_SENSOR_CONFIG);

      PutChar(1);		// 1 = KRS
      PutChar(touch_sensor_param.sense);
      PutChar(0u); /* type_aks_pos_hyst. */
      PutChar(0u);
      PutChar(0u);
#endif

      Send_Message();
}

void Transmit_Delta(void)
{
      int16_t delta;
      /* avoid Cppcheck Warning */
      UNUSED(delta);

#if ((DEF_TOUCH_QMATRIX == 1)      || \
     (DEF_TOUCH_QTOUCH_GRP_A == 1) || \
     (DEF_TOUCH_QTOUCH_GRP_B == 1))

      uint8_t c;
      PutChar(QT_DELTAS);
      for (c=0; c < QDEBUG_NUM_SENSORS; c++)
      {
              QDEBUG_GET_DELTA_FUNC( c, &delta);

              PutChar((uint8_t)((delta >>8) & 0xFFu));
              PutChar((uint8_t)(delta & 0xFFu));
      }
#endif

#if DEF_TOUCH_AUTONOMOUS_QTOUCH == 1
      uint16_t reference = *(QDEBUG_REFERENCES_PTR);
      uint16_t signal    = *(QDEBUG_SIGNALS_PTR);
      uint16_t unsigned_delta = (uint16_t)( reference - signal );
      delta = (int16_t) unsigned_delta;

      PutChar(QT_DELTAS);
      PutChar((uint8_t)((delta >>8) & 0xFFu));
      PutChar((uint8_t)(delta & 0xFFu));
#endif

      Send_Message();
}

void Transmit_State(void)
{
#if ((DEF_TOUCH_QMATRIX == 1)      || \
     (DEF_TOUCH_QTOUCH_GRP_A == 1) || \
     (DEF_TOUCH_QTOUCH_GRP_B == 1))

      uint8_t c;
      uint8_t *p_sensor_states = QDEBUG_SENSOR_STATES_PTR;
      uint8_t *p_rotor_slider_values = QDEBUG_SENSOR_RS_VALUES;

      PutChar(QT_STATES);
      PutChar(QDEBUG_NUM_CHANNELS);
      PutChar(QDEBUG_NUM_ROTORS_SLIDERS);

      for (c=0; c < QDEBUG_NUM_SENSOR_STATE_BYTES; c++)
      {
              PutChar(p_sensor_states[c]);
      }

      for (c=0; c < QDEBUG_NUM_ROTORS_SLIDERS; c++)
      {
              PutChar(p_rotor_slider_values[c] );
      }
#endif

#if DEF_TOUCH_AUTONOMOUS_QTOUCH == 1
      PutChar(QT_STATES);
      PutChar(QDEBUG_NUM_CHANNELS);
      PutChar(0u); /* Dummy. QDEBUG_NUM_ROTORS_SLIDERS. */
      PutChar(autonomous_qtouch_in_touch);
#endif

      Send_Message();
}
