==> mambrus/asf/thirdparty/qtouch/qdebug/QDebug_sam4l.c <==
#include "QDebug_sam4l.h"
#include "QDebugTransport.h"
#include "QDebugSettings.h"
#include "SPI_Master.h"
#include "SERIAL.h"
#include "BitBangSPI_Master.h"

void
Set_Global_Config (void)
{

#if DEF_TOUCH_QDEBUG_ENABLE_QT == 1
  touch_ret_t touch_ret = TOUCH_SUCCESS;



  touch_global_param_t global_params;

  global_params.recal_threshold = (recal_threshold_t) GetChar ();
  global_params.di = GetChar ();
  global_params.drift_hold_time = GetChar ();
  global_params.max_on_duration = GetChar ();
  global_params.neg_drift_rate = GetChar ();
  global_params.pos_drift_rate = GetChar ();
  global_params.pos_recal_delay = GetChar ();

  /* update the global parameter value inside the uc3l library */
  touch_ret = QDEBUG_UPDATE_GLOBAL_PARAM_FUNC (&global_params);
  if (touch_ret != TOUCH_SUCCESS)
    {
      while (1);
    }
#endif

#if DEF_TOUCH_QDEBUG_ENABLE_AT == 1
  //dummy
#endif

}

void
Set_Channel_Config (void)
{

#if DEF_TOUCH_QDEBUG_ENABLE_QT == 1
  touch_ret_t touch_ret = TOUCH_SUCCESS;


  sensor_id_t sensor_id;
  uint8_t type_aks_pos_hyst;

  touch_qt_param_t touch_sensor_param;

  sensor_id = GetChar ();

  /* Read back and initialize the touch_sensor_param structure.
     This is because not all the touch_sensor_param members are
     updated by this API. */
  touch_ret = QDEBUG_GET_SENSOR_CONFIG_FUNC (sensor_id, &touch_sensor_param);
  if (touch_ret != TOUCH_SUCCESS)
    {
      while (1);
    }

  /* Update the necessary members of the touch_sensor_param structure
     and write back. */
  touch_sensor_param.detect_threshold = GetChar ();
  type_aks_pos_hyst = GetChar ();
  touch_sensor_param.aks_group =
    (aks_group_t) ((uint8_t) ((type_aks_pos_hyst & 0x38u) >> 3u));
  touch_sensor_param.detect_hysteresis =
    (hysteresis_t) ((uint8_t) (type_aks_pos_hyst & 0x03u));

  touch_ret =
    QDEBUG_UPDATE_SENSOR_CONFIG_FUNC (sensor_id, &touch_sensor_param);
  if (touch_ret != TOUCH_SUCCESS)
    {
      while (1);
    }
#endif

#if DEF_TOUCH_QDEBUG_ENABLE_AT == 1
  //dummy
#endif
}

void
Transmit_Global_Config (void)
{
#if DEF_TOUCH_QDEBUG_ENABLE_QT == 1
  int16_t touch_ret;

  touch_global_param_t global_params;

  /* get the global parameters from the library and transmit the global
     parameters to the Qtouch Studio */
  touch_ret = QDEBUG_GET_GLOBAL_PARAM_FUNC (&global_params);
  if (touch_ret != TOUCH_SUCCESS)
    {
      while (1);
    }

  PutChar (QT_GLOBAL_CONFIG);

  PutChar (global_params.recal_threshold);
  PutChar (global_params.di);
  PutChar (global_params.drift_hold_time);
  PutChar (global_params.max_on_duration);
  PutChar (global_params.neg_drift_rate);
  PutChar (global_params.pos_drift_rate);
  PutChar (global_params.pos_recal_delay);
  PutInt (touch_qt_time.measurement_period_ms);
  PutInt (0);			//TICKS_PER_MS
  PutChar (0);			// Time_Setting

#endif

#if DEF_TOUCH_QDEBUG_ENABLE_AT == 1

  PutChar (QT_GLOBAL_CONFIG);

  PutChar (10u);			/* Dummy. */
  PutChar (AT_DI);
  PutChar (1u);			/* Dummy. drift_hold_time. */
  PutChar (0u);			/* Dummy. max_on_duration. */
  PutChar (5u);			/* Dummy. */
  PutChar (5u);			/* Dummy. */
  PutChar (1u);			/* Dummy. pos_recal_delay. */
  PutInt (touch_qt_time.measurement_period_ms);
  PutInt (0);			//TICKS_PER_MS
  PutChar (0);			// Time_Setting
#endif

  Send_Message ();
}

void
Transmit_Sensor_Config (void)
{
#if DEF_TOUCH_QDEBUG_ENABLE_QT == 1
  uint8_t c;
  sensor_t *p_sensors = QDEBUG_SENSOR_PTR;

  PutChar (QT_SENSOR_CONFIG);

  PutChar (1);			// 1 = KRS
  for (c = 0; c < QDEBUG_NUM_SENSORS; c++)
    {
      PutChar (p_sensors[c].threshold);
      PutChar (p_sensors[c].type_aks_pos_hyst);
      PutChar (p_sensors[c].from_channel);
      PutChar (p_sensors[c].to_channel);
    }

#endif

#if DEF_TOUCH_QDEBUG_ENABLE_AT == 1

  PutChar (QT_SENSOR_CONFIG);

  PutChar (1);			// 1 = KRS
  PutChar (AT_THRESHOLD);
  PutChar (0u);			/* type_aks_pos_hyst. */
  PutChar (0u);
  PutChar (0u);
#endif

  Send_Message ();
}

void
Transmit_Delta (void)
{
#if DEF_TOUCH_QDEBUG_ENABLE_QT == 1
  touch_ret_t touch_ret = TOUCH_SUCCESS;
  int16_t delta;

  uint8_t c;
  PutChar (QT_DELTAS);
  for (c = 0; c < QDEBUG_NUM_SENSORS; c++)
    {
      touch_ret = QDEBUG_GET_DELTA_FUNC (c, &delta);
      if (touch_ret != TOUCH_SUCCESS)
      {
        while (1u);		/* Check API Error return code. */
      }

      PutChar ((uint8_t) ((delta >> 8) & 0xFFu));
      PutChar ((uint8_t) (delta & 0xFFu));
    }

#endif

#if DEF_TOUCH_QDEBUG_ENABLE_AT == 1
  int8_t temp_delta = ((CATB->LEVEL >> 12) & 0xFFu);
  int16_t delta = (int16_t)(temp_delta);
  
  PutChar (QT_DELTAS);
  PutChar ((uint8_t) ((delta >> 8) & 0xFFu));
  PutChar ((uint8_t) (delta & 0xFFu));
  
#endif

  Send_Message ();  
}

void
Transmit_State (void)
{
#if DEF_TOUCH_QDEBUG_ENABLE_QT == 1
  uint8_t c;
  uint8_t *p_sensor_states = QDEBUG_SENSOR_STATES_PTR;
  uint8_t *p_rotor_slider_values = QDEBUG_SENSOR_RS_VALUES;

  PutChar (QT_STATES);
  PutChar (QDEBUG_NUM_CHANNELS);
  PutChar (QDEBUG_NUM_ROTORS_SLIDERS);

  for (c = 0; c < QDEBUG_NUM_SENSOR_STATE_BYTES; c++)
    {
      PutChar (p_sensor_states[c]);
    }

  for (c = 0; c < QDEBUG_NUM_ROTORS_SLIDERS; c++)
    {
      PutChar (p_rotor_slider_values[c]);
    }

  Send_Message ();
#endif

#if DEF_TOUCH_QDEBUG_ENABLE_AT == 1
  PutChar (QT_STATES);
  PutChar (QDEBUG_NUM_CHANNELS);
  PutChar (0u);			/* Dummy. QDEBUG_NUM_ROTORS_SLIDERS. */
  PutChar (autonomous_qtouch_in_touch);
#endif
}
